# freight-pilot

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes_calls.py  routes_carriers.py  routes_loads.py  routes_metrics.py  routes_negotiate.py  schemas.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/seed/: loads.json  seed_loads.py
backend/app/services/: fmcsa.py  negotiation.py
docs/: build-description.md  deploy.md  email-to-carlos.md
docs/agent/: happyrobot-workflow.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/calls/: page.tsx
frontend/src/app/calls/[id]/: page.tsx
frontend/src/app/loads/: page.tsx
frontend/src/app/negotiations/: page.tsx
frontend/src/components/: call-row.tsx  funnel.tsx  lane-table.tsx  outcomes-chart.tsx  recommendations.tsx  sentiment-bar.tsx  top-nav.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  stat.tsx
frontend/src/lib/: api.ts  utils.ts
